--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.h2.console.path=/h2
+spring.h2.console.enabled=true
 
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.show-sql=true
+
+
+
+spring.security.user.name=user
+spring.security.user.password=aaa
