--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.jpa.show-sql=true
 
 
 
-spring.security.user.name=user
+spring.security.user.name=user@email.com
 spring.security.user.password=aaa
