--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.h2.console.path=/h2
 spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url = jdbc:h2:mem:testdb
 spring.jpa.show-sql=true
-
-
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #spring.security.user.name=user@email.com
 #spring.security.user.password=aaa
+
+
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_ps?serverTimezone=Europe/Warsaw&createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=123QWEasd
