feature (PSA-17): Email Messages when new ticket and new comment are created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_ps?serverTimezone=Europe/Warsaw&createDatabaseIfNotExist=true
 #spring.datasource.username=root
 #spring.datasource.password=123QWEasd
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=problem.solving.application@gmail.com
+spring.mail.password=Problem12#
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
