--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,10 @@
 spring.h2.console.path=/h2
 spring.h2.console.enabled=true
-
 spring.datasource.url = jdbc:h2:mem:testdb
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
-
-#spring.security.user.name=user@email.com
-#spring.security.user.password=aaa
-
-
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_ps?serverTimezone=Europe/Warsaw&createDatabaseIfNotExist=true
-#spring.datasource.username=root
-#spring.datasource.password=123QWEasd
+spring.datasource.username=sa
+spring.datasource.password=
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -19,3 +12,4 @@ spring.mail.username=problem.solving.application@gmail.com
 spring.mail.password=Problem12#
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
